client/src/style/_utilities.scss
.center {
  height: 100%;
  width: 100%;
  display: grid;
  place-items: center;
  .spinner {
    color: var(--primary-cyan);
    width: 100px;
    height: 100px;
  }
}

.flare-icon {
  width: 100px;
  margin-bottom: auto;
}

.current-underline {
  border-bottom: 1px solid white;
}

// EXTRA

.page {
  background-color: var(--primary-background);
  position: absolute !important;
  inset: 0;
}

// GO FORWARD
.forward-appear,
.forward-enter {
  transform: translate3d(100%, 0, 0);
  z-index: 10;
  pointer-events: none !important;
  overflow: hidden !important;
}
.forward-appear-active,
.forward-enter.forward-enter-active {
  transition: 300ms !important;
  transform: translate3d(0, 0, 0);
  pointer-events: none !important;
  overflow: hidden !important;
}

.forward-exit {
  transform: scale3d(0.9, 0.9, 0.9);
  transition: 300ms;
  opacity: 0.7;
  pointer-events: none !important;
  overflow: hidden !important;
}

// GO BACKWARDS
.backward-appear,
.backward-enter {
  transform: scale3d(0.9, 0.9, 0.9);
  opacity: 0.7;
  pointer-events: none !important;
  overflow: hidden !important;
}
.backward-appear-active,
.backward-enter.backward-enter-active {
  transition: 300ms;
  transform: scale3d(1, 1, 1);
  opacity: 1;
  pointer-events: none !important;
  overflow: hidden !important;
}

.backward-exit.backward-exit-active {
  transition: 300ms;
  transform: translate3d(100%, 0, 0);
  pointer-events: none !important;
  overflow: hidden !important;
}

.blur {
  position: absolute;
  inset: 0;
  width: 100%;
  height: 100%;
  z-index: 0;
  backdrop-filter: blur(10px);
}

.remove-user {
  transform: scale3d(0, 0, 0) !important;
  width: 0px !important;
  min-width: 0px !important;
}

.list-active {
  height: 79px !important;
}

.popup-show {
  visibility: visible !important;
  animation: createGroupShow 250ms forwards;
}

@keyframes createGroupShow {
  from {
    transform: scale3d(0.5, 0.5, 0.5);
    opacity: 0;
  }
  to {
    transform: scale3d(1, 1, 1);
    opacity: 1;
  }
}

.popup-hide {
  pointer-events: none;
  animation: createGroupHide 250ms forwards;
}

@keyframes createGroupHide {
  from {
    transform: scale3d(1, 1, 1);
    opacity: 1;
  }
  to {
    transform: scale3d(0.5, 0.5, 0.5);
    opacity: 0;
  }
}

.show-fade-half {
  visibility: visible !important;
  animation: showFadeHalf 250ms forwards;
}
@keyframes showFadeHalf {
  from {
    opacity: 0;
  }
  to {
    opacity: 0.5;
  }
}

.hide-fade-half {
  animation: hideFade 250ms forwards;
}
@keyframes hideFade {
  from {
    opacity: 0.5;
  }
  to {
    opacity: 0;
  }
}

// .measure-text-length {
//   width: fit-content;
//   position: fixed;
//   visibility: hidden;
//   outline: none;
//   border: none;
//   font-size: 16px;
//   line-height: 20px;
//   white-space: break-spaces;
// }

